# cpplocate

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  appveyor.yml  configure  cpplocate-config.cmake  liblocate-config.cmake
.github/workflows/: ci.yml
cmake/: CompileOptions.cmake  CopyIfExists.cmake  ModuleInformation.cmake
deploy/: CMakeLists.txt
deploy/ubuntu-ppa/: recipe.txt
deploy/ubuntu-ppa/debian/: changelog  control  copyright  rules
docs/api-docs/: CMakeLists.txt  doxyfile.in
source/: CMakeLists.txt
source/cpplocate/: CMakeLists.txt
source/cpplocate/include/cpplocate/: ModuleInfo.h  cpplocate.h  cpplocate.inl  utils.h
source/cpplocate/source/: ModuleInfo.cpp  cpplocate.cpp  utils.cpp
source/liblocate/: CMakeLists.txt
source/liblocate/include/liblocate/: liblocate.h  utils.h
source/liblocate/source/: liblocate.c  liblocate.cpp  utils.c  utils.cpp  utils.h
source/tests/: CMakeLists.txt
source/tests/cpplocate-test/: CMakeLists.txt  cpplocate_test.cpp  main.cpp  utility_test.cpp  utils_test.cpp
source/tests/liblocate-test/: CMakeLists.txt  liblocate_test.cpp  utils_test.cpp
